fix: REUSE compliance

--- a/.github/workflows/reuse.yml
+++ b/.github/workflows/reuse.yml
@@ -1,4 +1,7 @@
+# SPDX-FileCopyrightText: 2025 GSI Helmholtzzentrum für Schwerionenforschung GmbH <https://www.gsi.de/en/>
+#
 # SPDX-License-Identifier: CC0-1.0
+
 ---
 name: REUSE Compliance Check
 
