--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,6 +23,11 @@ jobs:
       with:
         go-version: ${{ matrix.go-version }}
 
+    - name: Setup gotestsum
+      uses: autero1/action-gotestsum@v2.0.0
+      with:
+        gotestsum_version: 1.12.2
+
     - name: Cache Go modules
       uses: actions/cache@v4
       with:
