--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # SPDX-FileCopyrightText: 2025 GSI Helmholtzzentrum für Schwerionenforschung GmbH <https://www.gsi.de/en/>
 #
-# SPDX-License-Identifier: LGPL-3.0-only
+# SPDX-License-Identifier: CC0-1.0
 
 # If you prefer the allow list template instead of the deny list, see community template:
 # https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
