--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -87,7 +87,7 @@ jobs:
         GOARCH: ${{ matrix.goarch }}
         CGO_ENABLED: 0
       run: |
-        go build -v ./cmd/bmctl
+        go build -buildvcs=true -v ./cmd/bmctl
 
     - name: Upload build artifacts
       if: matrix.go-version == '1.24'
