--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -81,7 +81,7 @@ jobs:
     - name: Download dependencies
       run: go mod download
 
-    - name: Build
+    - name: Build Debug
       env:
         GOOS: ${{ matrix.goos }}
         GOARCH: ${{ matrix.goarch }}
@@ -93,7 +93,7 @@ jobs:
       if: matrix.go-version == '1.24'
       uses: actions/upload-artifact@v4
       with:
-        name: bmctl-${{ matrix.goos }}-${{ matrix.goarch }}
+        name: bmctl-${{ matrix.goos }}-${{ matrix.goarch }}-debug
         path: |
           bmctl*
         retention-days: 30
